adjusted the width on the events page to fix the overflow and lowered the headers

--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -3,7 +3,7 @@
     width: max-content;
     font-size: 40px;
     color: white !important;
-    margin: 40px auto 0 auto;
+    margin: 140px auto -40px auto;
     font-weight: 600;
 }
 
